# Triceratops-XT

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  config.h.in  windows-cross-build.cmake
cmake/: FactoryPresets.cmake  LV2HeaderWorkaround.cmake
plugin/: DistrhoPluginInfo.h  engine.cpp  params.cpp  params.hpp  presets.cpp  presets.hpp  stb_decompress.h  triceratops.cpp  triceratops.hpp  triceratops_ui.cpp  triceratops_ui.hpp
src/: .gitrepo  README  README.md  adsr_lfo_gui.cpp  amp_gui.cpp  dco_gui.cpp  echo_gui.cpp  fader_widget.cpp  fader_widget.h  filter_widget.cpp  filter_widget.h  knob_widget.cpp  knob_widget.h  lfo_gui.cpp  logo_gui.cpp  modifier_gui.cpp  modifier_gui.h  nix-echo.cpp  nix-echo.hpp  presets.cpp  presets.h  reverb_gui.cpp  spacer_widget.cpp  start  synth.cpp  synth.h  toggle_widget.cpp  toggle_widget.h  triceratops.cpp  triceratops.hpp  triceratops.ttl  triceratops_categories.txt  triceratops_gui.cpp  volume_widget.cpp  volume_widget.h  wave_widget.cpp  widget_button.cpp  widget_button.h  wscript
src/presets.lv2/: 128-growlie.ttl  CZesque_Pad.ttl  DeepPluck.ttl  First_Exoplanet_Data.ttl  First_Exoplanet_Data_2.ttl  Glass_Pad.ttl  Mantronic_Bass.ttl  PluckBass_2.ttl  Selected_Ambient_EPiano.ttl  The_Thing_Bass.ttl  Weird_Harmonic_EPiano.ttl  Winds_Of_Mars.ttl  aceeeed.ttl  acid_1.ttl  acid_2.ttl  acid_pw.ttl  after_the_storm.ttl  analogue_single_string.ttl  big_pad.ttl  big_trance.ttl  brass.ttl  brass2.ttl  castral.ttl  clang.ttl  classic_analogue_swell.ttl  creamy_unison.ttl  czish.ttl  dervis_3.ttl  dervish.ttl  dervish_2.ttl  dervish_3.ttl  dominator.ttl  dual_sync_pad.ttl  dubstep_wobble_1.ttl  dubstep_wobble_2.ttl  electro.ttl  eno-esque.ttl  evil_whispers.ttl  fm_slight_vox.ttl  fm_twangy.ttl  (+41 more)
ui/: EditorUI.cpp  EditorUI.hpp  Menus.cpp  Utils.cpp
utils/factory_bank_to_c/: CMakeLists.txt  main.cpp
